@@ -1,7 +1,7 @@
 //
 // HTTPSession.h
 //
-// $Id: //poco/1.3/Net/include/Poco/Net/HTTPSession.h#6 $
+// $Id: //poco/1.3/Net/include/Poco/Net/HTTPSession.h#7 $
 //
 // Library: Net
 // Package: HTTP
@@ -44,6 +44,7 @@
 #include "Poco/Net/StreamSocket.h"
 #include "Poco/Timespan.h"
 #include "Poco/Exception.h"
+#include "Poco/Any.h"
 #include <ios>
 
 
@@ -91,6 +92,20 @@ public:
 		/// pointer to this exception is returned.
 		/// 
 		/// Otherwise, NULL is returned.
+
+	void attachSessionData(const Poco::Any& data);
+		/// Allows to attach an application-specific data 
+		/// item to the session.
+		///
+		/// On the server side, this can be used to manage
+		/// data that must be maintained over the entire
+		/// lifetime of a persistent connection (that is,
+		/// multiple requests sent over the same connection).
+	
+	const Poco::Any& sessionData() const;
+		/// Returns the data attached with attachSessionData(),
+		/// or an empty Poco::Any if no user data has been
+		/// attached.
 
 	enum
 	{
@@ -186,6 +201,7 @@ private:
 	bool             _keepAlive;
 	Poco::Timespan   _timeout;
 	Poco::Exception* _pException;
+	Poco::Any        _data;
 	
 	friend class HTTPStreamBuf;
 	friend class HTTPHeaderStreamBuf;
@@ -224,6 +240,12 @@ inline const Poco::Exception* HTTPSession::networkException() const
 inline int HTTPSession::buffered() const
 {
 	return static_cast<int>(_pEnd - _pCurrent);
+}
+
+
+inline const Poco::Any& HTTPSession::sessionData() const
+{
+	return _data;
 }
 
 
