@@ -169,6 +169,8 @@ Release 1.4.0 (2010-09-??)
 - Poco::PatternFormatter can format source file path and line number (%U, %u)
 - logging macros (poco_information(), etc.) now use __LINE__ and __FILE__
 - new logging macros that incorporate Poco::format(): poco_information_f1(logger, format, arg) with up to 4 arguments
+- added Poco::Net::HTTPSession::attachSessionData() and Poco::Net::HTTPSession::sessionData()
+  to attach arbitrary data to a HTTP session.
 
 
 Release 1.3.6p2 (2010-01-15)
@@ -1350,4 +1352,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#125 $
+$Id: //poco/1.3/dist/CHANGELOG#126 $
